tests/test63.rael.exp
Error [1:3]: Division by zero
| 7 / 0
|   ^
